# wc2026-model

./: .gitignore  README.md  model_config.example.json  pyproject.toml  requirements-ui.txt
.claude/: settings.local.json
docs/: external_wc2026_models.md  model_improvement_roadmap.md  research_notes.md  wc2026_repo_scan.md
models/: baseline_dixon_coles_elo.pkl
reports/: api_football_injuries_download_summary.json  baseline_latest_elo_ratings.csv  historical_world_cup_real_xi_squad_strength.csv  historical_world_cup_real_xi_transfermarkt_strength.csv  track_record_match_ledger.csv  track_record_match_scored.csv  track_record_outright_ledger.csv  track_record_summary.json  validation_real_vs_heuristic_xi_heuristic.json  validation_real_vs_heuristic_xi_real.json  wc2026_live_squad_intelligence.csv  wc2026_squad_players_with_club_elo.csv  wc2026_squad_players_with_player_elo.csv  wc2026_squad_strength_player_elo_ratings.csv  wc2026_squad_strength_ratings.csv  wc2026_team_availability_features.csv
scripts/: backtest_baseline.py  backtest_knockout_temperature.py  benchmark_backtest.py  blend_wc2026_current_xg_overlay.py  build_augmented_results_dataset.py  build_blended_benchmark_predictions.py  build_composite_real_xi_strength.py  build_historical_world_cup_squad_strengths.py  build_live_squad_intelligence.py  build_model_improvement_scorecard.py  build_player_goal_rate.py  build_public_match_odds_snapshot.py  build_real_xi_squad_strength.py  build_real_xi_transfermarkt_strength.py  build_statsbomb_goal_scorers.py  build_statsbomb_real_lineups.py  (+47 more)
tests/: conftest.py  (+44 more)
(+68 files in other folders)
