[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026-model"
version = "0.1.0"
description = "Quant-style World Cup 2026 forecasting and market comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "penaltyblog>=1.11.0",
  "soccerdata>=1.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
